apps/monitoring/templates/alertmanager-httpauth-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: alertmanager-httpauth
  annotations:
    "nginx.ingress.kubernetes.io/auth-type": "basic"
    "nginx.ingress.kubernetes.io/auth-secret": "alertmanager-httpauth"
    "nginx.ingress.kubernetes.io/auth-secret-type": "auth-map"
spec:
  ingressClassName: nginx
  rules:
  - host: "~iac:subdomain_prefix~-alertmanager.~iac:root_domain~"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager-operated
            port:
              name: http-web
