apps/monitoring/templates/prometheus-httpauth-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus-httpauth
  annotations:
    "nginx.ingress.kubernetes.io/auth-type": "basic"
    "nginx.ingress.kubernetes.io/auth-secret": "prometheus-httpauth"
    "nginx.ingress.kubernetes.io/auth-secret-type": "auth-map"
spec:
  ingressClassName: nginx
  rules:
  - host: "cloudcli-prometheus.~iac:root_domain~"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-operated
            port:
              name: http-web
